# wxcmaketest

./: .gitignore  CMakeLists.txt
res/: app.rc
src/: cApp.cpp  cApp.h  cMain.cpp  cMain.h
